@@ -179,6 +179,13 @@ resolve_full_file (const gchar *path)
 	} else if (resolve_is_man_path (path, "bz2")) {
 	    type = YELP_RRN_TYPE_MAN;
 	}
+    } else if (g_str_equal (mime_type, "application/x-lzma")) {
+ 	    if (g_str_has_suffix (path, ".info.lzma")) {
+ 		    type = YELP_RRN_TYPE_INFO;
+ 	    } else if (resolve_is_man_path (path, "lzma")) {
+ 		    type = YELP_RRN_TYPE_MAN;
+ 	    }
+
     } else if (g_str_equal (mime_type, "text/plain")) {
 	if (g_str_has_suffix (path, ".info")) {
 	    type = YELP_RRN_TYPE_INFO;
